--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,29 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+# Compiled class files
+target/
+build/
 
-### STS ###
-.apt_generated
+# Logs
+*.log
+
+# IntelliJ IDEA
+.idea/
+
+# Eclipse
 .classpath
-.factorypath
 .project
-.settings
-.springBeans
-.sts4-cache
+.settings/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# Gradle
+.gradle/
+build/
 
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Maven
+.mvn/
+target/
+pom.xml.tag
+release.properties
+
+# Spring Boot generated files
+/application*.properties
+/application*.yml
+/application*.yaml
